[+] Smaller photos [fix] ratio stretching

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -405,6 +405,7 @@ footer {
     img {
       width: 224px;
       height: 327px;
+      object-fit: cover;
       overflow: hidden;
     }
   }
